# weather-api

./: Cargo.toml
src/: api.rs  main.rs  notification_handler.rs  rpc_client.rs
src/api/: router.rs
