[package]
name = "weather-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
lapin = "4.1.1"
async-rs = "0.8.0"
anyhow = "1.0.102"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1.18"
chrono = { version = "0.4.44", features = ["serde"] }
axum = "0.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
argon2 = "0.5.3"
